Added list copying and began friend of friend maangement in the Network class.

--- a/RudyAriazHeadEssay/RudyAriazHeadEssay.csproj
+++ b/RudyAriazHeadEssay/RudyAriazHeadEssay.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Copier.cs" />
     <Compile Include="Invitation.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
@@ -71,6 +72,9 @@
     </Compile>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainUIForm.resx">
+      <DependentUpon>MainUIForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
